Changelog
=========


1.0.2 (unreleased)
------------------

- Use ftw.testbrowser for testing.
  [mathias.leimgruber]


1.0.1 (2013-05-24)
------------------

- General package clean up:
  Update Readme, update metadata, testing, declare dependencies


1.0 (2011-02-25)
----------------

- Initial release